--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,16 @@
             "CUDA": "12.6.0"        
         }
     },
+    "remoteUser": "user",
     "runArgs": [
-        "--gpus", "all"
-    ]
+        "--gpus", "all",
+        "--hostname=build"
+    ],
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "dlech.chmod"
+            ]
+        }
+    }
 }
