--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -28,10 +28,25 @@ RUN apt update && apt install -y --no-install-recommends \
     protobuf-compiler python3-dev python3-venv python3-numpy python3-wheel python3-setuptools \
 && rm -rf /var/lib/apt/lists/*
      
-  
+RUN apt-get update \
+    && apt-get -y install --no-install-recommends \
+        libgstreamer1.0-0 \
+        gstreamer1.0-plugins-base \
+        gstreamer1.0-plugins-good \
+        gstreamer1.0-plugins-bad \
+        gstreamer1.0-plugins-ugly \
+        gstreamer1.0-tools \
+        python3-gi \
+        gir1.2-gstreamer-1.0 \
+        libgstreamer-plugins-base1.0-dev \
+        gstreamer1.0-libav \
+        gstreamer-1.0 \
+    && apt-get clean -y \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3-pip \
+    ffmpeg \
   && rm -rf /var/lib/apt/lists/*
 
 ARG USERNAME=user
